tests/ValidPrograms/Test6/test6.c

int main() {
	int a,b,c;
	a = 5;
	b = a+2;
	c = b^a;
	return c;
}
