tests/SyntaxError/Test21/test21.c
int main(){
	int a=0;
	if a==5 {
		return a+1;
	} else {
		return a+2;
	}

}
